Feature: add alias check
